extends Control

var SceneNode

func _on_UI_Button_pressed():
	SceneNode = preload("res://Examples/Calculator Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button2_pressed():
	SceneNode = preload("res://Examples/Computer Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button3_pressed():
	SceneNode = preload("res://Examples/Computer Role-Playing Game Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button4_pressed():
	SceneNode = preload("res://Examples/Godot Spash Screen Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button5_pressed():
	SceneNode = preload("res://Examples/Idle Game Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button6_pressed():
	SceneNode = preload("res://Examples/Slot Machine Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_UI_Button7_pressed():
	SceneNode = preload("res://Examples/Typing Adventure Game Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button_pressed():
	SceneNode = preload("res://Examples/2D Platformer Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button2_pressed():
	SceneNode = preload("res://Examples/Breakout Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button3_pressed():
	SceneNode = preload("res://Examples/Endless Runner Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button4_pressed():
	SceneNode = preload("res://Examples/Endless Shoot-em-up Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button5_pressed():
	SceneNode = preload("res://Examples/Pet Simulator Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button6_pressed():
	SceneNode = preload("res://Examples/Rhythm Game Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button7_pressed():
	SceneNode = preload("res://Examples/Top-Down Shooter Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button8_pressed():
	SceneNode = preload("res://Examples/Visual Novel Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button9_pressed():
	SceneNode = preload("res://Examples/Volume Visualizer Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_2D_Button10_pressed():
	SceneNode = preload("res://Examples/Super Auto Pets Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_3D_Button_pressed():
	SceneNode = preload("res://Examples/3D & 2D Platform Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_3D_Button2_pressed():
	SceneNode = preload("res://Examples/3D Music Visualizer Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_3D_Button3_pressed():
	SceneNode = preload("res://Examples/3D Platformer Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_3D_Button4_pressed():
	SceneNode = preload("res://Examples/Punch-Out Example.tscn")
	get_tree().change_scene_to(SceneNode)

func _on_Clone_Button_pressed():
	SceneNode = preload("res://Examples/Roblox Tycoon Example.tscn")
	get_tree().change_scene_to(SceneNode)
